back button minus logic

--- a/application.css
+++ b/application.css
@@ -5,7 +5,7 @@ body{
     background-size: cover;
 }
 
-h1 {
+.main h1 {
     color: darkorange;
     text-align: center;
     font-family: Calibri;
@@ -31,7 +31,6 @@ h1 {
     -webkit-border-radius:28px;
     border-radius:28px;
     border:1px solid #18ab29;
-    display:inline-block;
     cursor:pointer;
     color:#ffffff;
     font-family:Arial;
@@ -50,8 +49,36 @@ h1 {
     top:1px;
 }
 
+.quiz_back_button {
+    background-color: cornflowerblue;
+    -moz-border-radius:28px;
+    -webkit-border-radius:28px;
+    border-radius:28px;
+    border:1px solid #18ab29;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:17px;
+    padding:16px 31px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #2f6627;
+}
+
+.quiz_back_button:hover{
+    background-color:#5cbf2a;
+}
+
+.quiz_back_button:active {
+    position:relative;
+    top:1px;
+}
+
 .quiz_q_and_a{
     display: none;
+}
+
+.button_container{
+    display: inline-flex;
 }
 
 .main{
